# STGG-AL

./: pyproject.toml
resource/: fragments.pkl
resource/data/jmt_cont_core/: data.csv  test_idx_jmt_cont_core_0.98_0.01_0.01.json  train_idx_jmt_cont_core_0.98_0.01_0.01.json  val_idx_jmt_cont_core_0.98_0.01_0.01.json  vocab_trainval.npy
src/: active_learning.sh  compute_xtb_coordinates.py  filter.py  filter_fragments.py  filter_prop_predictor.py  make_gaussian.py  parse_results.py  train_condgenerator.py
src/data/: dataset.py
src/experiments/: filter.sh  filter_and_compute_coordinates.sh  filter_prop.sh  jmt_cont_core.sh  make_gaussian.sh  parse_results.sh
src/model/: generator.py
src/props/: properties.py
