[project]
name = "stgg-al"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython>=3.1.3",
    "dotmap>=1.3.30",
    "fcd-torch>=1.0.7",
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "ray>=2.49.1",
    "rdkit>=2025.3.6",
    "scikit-learn>=1.7.2",
    "torch==2.3.0",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.3.0",
    "torchvision>=0.18.0",
    "wandb>=0.21.3",
]
